<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.FormFragment">

    <!-- Linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/marca"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="188dp" />

        <EditText
            android:id="@+id/marca_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mark"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="290dp" />

        <EditText
            android:id="@+id/modelo_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modelo"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="371dp" />

        <EditText
            android:id="@+id/motor_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/motor"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traccion"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="463dp" />

        <EditText
            android:id="@+id/traccion_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/traccion"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />

        <Button
            android:id="@+id/buttonSv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>